danger button style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 
         <div class="app-actions">
           <button @click="uncheckAll" class="pure-button">Uncheck All</button>
-          <button @click="removeAllItems" class="pure-button ml-xs">
+          <button
+            @click="removeAllItems"
+            class="danger-button pure-button ml-xs"
+          >
             Remove All
           </button>
         </div>
