--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             v-model="text"
           />
 
-          <button class="emoji-button pure-button">➕</button>
+          <button class="add-button emoji-button pure-button">➕</button>
         </fieldset>
       </form>
     </div>
