--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/pure-grids-min.css" />
     <link rel="stylesheet" href="css/spacing.css" />
     <link rel="stylesheet" href="css/app.css" />
-    <script defer src="js/libs/vue.global.js"></script>
+    <script defer src="js/libs/vue.global.min.js"></script>
     <script defer type="module" src="js/app.js"></script>
   </head>
 
