password and getItems request

--- a/index.html
+++ b/index.html
@@ -16,73 +16,93 @@
 
   <body>
     <div id="app">
-      <div class="app-header">
-        <h1 class="site-title">Grocery List</h1>
+      <template v-if="hasToken">
+        <div class="app-header">
+          <h1 class="site-title">Grocery List</h1>
 
-        <div class="app-actions">
-          <button @click="uncheckAll" class="pure-button">Uncheck All</button>
-          <button
-            @click="removeAllItems"
-            class="danger-button pure-button ml-xs"
-          >
-            Remove All
-          </button>
+          <div class="app-actions">
+            <button @click="uncheckAll" class="pure-button">Uncheck All</button>
+            <button
+              @click="removeAllItems"
+              class="danger-button pure-button ml-xs"
+            >
+              Remove All
+            </button>
+          </div>
         </div>
-      </div>
 
-      <ul class="list">
-        <li class="list-item" v-for="(item, idx) in items">
-          <label
-            :class="{ done: item.done }"
-            class="list-item-activator"
-            v-if="item.id !== editingItemId"
-          >
+        <ul class="list">
+          <li class="list-item" v-for="(item, idx) in items">
+            <label
+              :class="{ done: item.done }"
+              class="list-item-activator"
+              v-if="item.id !== editingItemId"
+            >
+              <input
+                :checked="item.done"
+                @input="checkItem(item, $event)"
+                class="mr-sm"
+                type="checkbox"
+              />
+              <div class="list-item-name">{{ item.name }}</div>
+            </label>
+
+            <app-edit-form
+              :item="item"
+              @edited="editItem"
+              v-else
+            ></app-edit-form>
+
+            <button
+              @click="showEditForm(item.id)"
+              class="emoji-button pure-button ml-xs"
+              v-if="!editingItemId"
+            >
+              ✏️
+            </button>
+
+            <button
+              @click="removeItem(item.id)"
+              class="emoji-button pure-button ml-xxs"
+              v-if="!editingItemId"
+            >
+              ❌
+            </button>
+          </li>
+        </ul>
+
+        <form
+          @submit.prevent="addItem"
+          class="item-form pure-form"
+          v-if="!editingItemId"
+        >
+          <fieldset>
             <input
-              :checked="item.done"
-              @input="checkItem(item, $event)"
-              class="mr-sm"
-              type="checkbox"
+              class="pure-input-1 mr-sm"
+              placeholder="Type item here"
+              ref="addFormInput"
+              type="text"
+              v-model="text"
             />
-            <div class="list-item-name">{{ item.name }}</div>
-          </label>
 
-          <app-edit-form :item="item" @edited="editItem" v-else></app-edit-form>
+            <button class="add-button emoji-button pure-button">➕</button>
+          </fieldset>
+        </form>
+      </template>
 
-          <button
-            @click="showEditForm(item.id)"
-            class="emoji-button pure-button ml-xs"
-            v-if="!editingItemId"
-          >
-            ✏️
-          </button>
-
-          <button
-            @click="removeItem(item.id)"
-            class="emoji-button pure-button ml-xxs"
-            v-if="!editingItemId"
-          >
-            ❌
-          </button>
-        </li>
-      </ul>
-
-      <form
-        @submit.prevent="addItem"
-        class="item-form pure-form"
-        v-if="!editingItemId"
-      >
-        <fieldset>
-          <input
-            class="pure-input-1 mr-sm"
-            placeholder="Type item here"
-            ref="addFormInput"
-            type="text"
-            v-model="text"
-          />
-
-          <button class="add-button emoji-button pure-button">➕</button>
-        </fieldset>
-      </form>
+      <template v-else>
+        <form @submit.prevent="handlePasswordSubmit" class="pure-form">
+          <fieldset class="flex">
+            <input
+              class="pure-input-1 mr-sm"
+              placeholder="Password"
+              type="text"
+              v-model="password"
+            />
+            <button class="pure-button">Go</button>
+          </fieldset>
+        </form>
+      </template>
     </div>
 
     <template id="edit-form">
