manifest and service worker fixes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>Groceries</title>
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="/groceries/manifest.json" />
     <link rel="stylesheet" href="css/pure-nr-min.css" />
     <link rel="stylesheet" href="css/pure-grids-min.css" />
     <link rel="stylesheet" href="css/spacing.css" />
